--- a/atcData/frmSelectData.resx
+++ b/atcData/frmSelectData.resx
@@ -259,7 +259,7 @@
     <value>2</value>
   </data>
   <data name="chkFilter.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Bottom, Left</value>
+    <value>Bottom, Right</value>
   </data>
   <data name="chkFilter.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
